crates/aranya-policy-compiler/tests/data/type_errors/option_arg_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: option[int]
  |
1 | function bar(x int) bool {
  |                --- expected because of this
...
5 |     return bar(Some(3))
  |                ^^^^^^^ expected `int` but found `option[int]`
